--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "start": "cross-env NODE_ENV=production nodemon server.js"
+
   },
   "keywords": [],
   "author": "Alina Galben",
@@ -26,6 +28,7 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "cross-env": "^10.0.0",
+    "nodemon": "^3.1.10"
   }
 }
