--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "start": "cross-env NODE_ENV=production nodemon server.js"
-
+    "start": "nodemon server.js",
+    "prod": "node server.js"
   },
   "keywords": [],
   "author": "Alina Galben",
@@ -28,7 +27,6 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "cross-env": "^10.0.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.9"
   }
 }
